fixed layout issues

--- a/styles.css
+++ b/styles.css
@@ -8,23 +8,25 @@ body {
     align-items: center;
     height: 100vh;
     overflow: hidden;
+    
   }
   
   .container {
     display: flex;
     width: 100%;
     height: 100%;
+    justify-content: center;
+    align-items: center;
+   
   }
   
   #pdfViewerContainer {
     flex: 1;
-    display: flex;
+    display: none; 
     justify-content: center;
     align-items: center;
-    background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
     margin: 10px;
+    padding: 10px;
   }
   
   #pdfViewer {
@@ -37,7 +39,7 @@ body {
   
   aside {
     width: 300px;
-    height: 80vh; 
+    height: 40vh;
     background-color: #ffffff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 25px;
@@ -45,8 +47,20 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: auto; 
     text-align: center;
+    transition: transform 0.5s ease, right 0.5s ease;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  aside.move-to-side {
+    left: auto; 
+    right: 10%;
+    top: 20%; 
+    transform: none;
+    height: 50vh;
   }
   
   header {
@@ -61,17 +75,17 @@ body {
   
   p {
     margin-top: 1rem;
-    font-size: 1.2rem; 
+    font-size: 1.2rem;
   }
   
   .upload-btn {
     display: inline-block;
-    padding: 1rem 2rem; 
+    padding: 1rem 2rem;
     background-color: #4CAF50;
     color: white;
-    border-radius: 2rem; 
+    border-radius: 2rem;
     cursor: pointer;
-    margin-top: 2rem; 
+    margin-top: 2rem;
   }
   
   .upload-btn input[type="file"] {
@@ -82,21 +96,24 @@ body {
     background-color: #333;
     color: white;
     padding: 1rem;
-    border-radius: 0.5rem; 
-    font-size: 1rem;
+    border-radius: 0.5rem;
+    font-size: 0.8rem;
     display: none;
   }
   
   .copy-success {
+    position: absolute;
     background-color: #4CAF50;
     color: white;
-    padding: 1rem 2rem;
-    border-radius: 0.5rem; 
+    padding: 0.5rem 1rem;
+    border-radius: 0.5rem;
     display: none;
-  }
+    top: -15%;
+    left: 35%;
+}
   
   canvas {
-    border: none; 
+    border: none;
     max-width: 100%;
     max-height: calc(100vh - 100px);
     width: auto;
